--- a/Chapter1_Proteins.qmd
+++ b/Chapter1_Proteins.qmd
@@ -1,6 +1,6 @@
 # Proteins: from sequence to structure {#sec-ProtIntro}
 
-Proteins are the fundamental building blocks of biological systems, and understanding their structure is crucial for deciphering their function. The journey from a one-dimensional (1D) amino acid sequence to a two-dimensional (2D) contact map/distance map and finally to a three-dimensional (3D) structure has been one of the grand challenges in computational biology. In this chapter, we explore how protein models based on attention/transformer-like modules, like AlphaFold and ESMfold(2)[@lin2023], revolutionized this space. Though we should not from the start, that models which are aware of multiple sequences alignment (MSA) during training, that are supervised to understand evolutionary constraint (i.e learn what can and cannot easily change in a protein) are VERY hard to beat for pure Protein language Models. Those MSA aware models, specifically Alphafold and Alphafold2[@jumper2021] won their developers a Nobel Price in medicine. Befoe you dive into these chapters on protein models, its worth watching this vertasium video titled "[The most useful thing AI has ever done](https://www.youtube.com/watch?v=P_fHJIYENdI)" as a way of easing into the topic. one elephant in the room is that protein language models, which do not rely on MSA, have struggled greatly to beat much smaller protein models that directly incorporate MSA, so always evaluate the pro's/con's of different architectures for your specific research questions & needs!
+Proteins are the fundamental building blocks of biological systems, and understanding their structure is crucial for deciphering their function. The journey from a one-dimensional (1D) amino acid sequence to a two-dimensional (2D) contact map/distance map and finally to a three-dimensional (3D) structure has been one of the grand challenges in computational biology. In this chapter, we explore how protein models based on attention/transformer-like modules, like AlphaFold and ESMfold(2)[@lin2023], revolutionized this space. Though we should not from the start, that models which are aware of multiple sequences alignment (MSA) during training, that are supervised to understand evolutionary constraint (i.e learn what can and cannot easily change in a protein) are VERY hard to beat for pure Protein language Models. Those MSA aware models, specifically Alphafold and Alphafold2[@jumper2021] won their developers a Nobel Price in medicine. Before you dive into these chapters on protein models, its worth watching this vertasium video titled "[The most useful thing AI has ever done](https://www.youtube.com/watch?v=P_fHJIYENdI)" as a way of easing into the topic. one elephant in the room is that protein language models, which do not rely on MSA, have struggled greatly to beat much smaller protein models that directly incorporate MSA, so always evaluate the pro's/con's of different architectures for your specific research questions & needs!
 
 ## Traditional Approaches to Protein Structure Prediction
 
@@ -72,6 +72,8 @@ The success of AlphaFold 2 marked a watershed moment for protein structure predi
 Protein language models (PLMs) now slowly emerge as an alternative that is way cheaer to run, and doesnt require MSA allignment. By pretraining on vast protein databases, PLMs capture contextual information about amino acids and their interactions without needing MSAs. Models like ESM (Evolutionary Scale Modeling)[@rives2021], ESM2[@lin2023] and ProtTrans[@elnaggar2022] demonstrated the potential of PLMs to predict secondary and tertiary structures directly from sequence data. By encoding the relationships between residues through attention mechanisms, these models implicitly learn structural and functional properties, generating accurate 2D contact maps and even 3D coordinates in some cases.
 
 Protein language models are frequently augmented with geometric neural networks or other additional model "adapters" when used for protein structure prediction. These augmentations ensure the 1D sequences, 2D contact maps, and 3D protein shapes that follow adhere to basic geometric rules. A language model or another sequence model isn't inherently aware of 3D space. So while we'll experiment with the latent 2D representations (distances between amino acids) that are implicitly hiding in language models, those representations are noisy and might imply 3D structures that cannot exist (e.g., the distance between a and b, and b and c, might not be consistent with the distance between b and c, etc.). Adding specific neural networks that are designed to produce results that can exist in Euclidean (3D) space greatly improves protein structure prediction. More recent experimentation has linked protein language models directly to diffusion image models to predict protein structure in 3D space with minimal supervision.
+
+Its worth considering that while pure protein language models have partly closed the gap to models rthata re aware of MSA and structure, they still lag those models in various applicaiton as becoems apprent from extensicve protein model evaluations. For a recent overview of the relative performance of differnet protein model architectures  check out [this 2025 blog post by Pascal Notin](https://pascalnotin.substack.com/p/have-we-hit-the-scaling-wall-for).
 
 ### Protein language models as biologically tokenized DNA language models
 
