--- a/Chapter1_DNA.qmd
+++ b/Chapter1_DNA.qmd
@@ -174,6 +174,6 @@ You can run the script yourself, but I have also gone ahead and uploaded this pa
 
 ## Summary
 
-In this chapter, we: - Introduced Ensembl and BioMart as tools for retrieving genomic data. - Explained FASTA files and human CDS, which form the core of our dataset. - Discussed the advantages of uploading datasets to Hugging Face, emphasizing its integration with `Transformers` and `Trainer` python libraries. - Provided an R script to download, process, and store human CDS in a structured format.
+In this chapter, we: 1. Introduced Ensembl and BioMart as tools for retrieving genomic data. Explained FASTA files and human CDS, which form the core of our dataset. 2. Discussed the advantages of uploading datasets to Hugging Face, emphasizing its integration with `Transformers` and `Trainer` python libraries. 3. Provided an R script to download, process, and store human CDS in a structured format.
 
 In the next chapter, we will explore preprocessing techniques like tokenization and strategies for encoding DNA sequences into a format suitable for training a deep learning language model, and we use Huggingface Transformers and Trainer library to train our first little DNA language model!
